# hajimu_engine_2d

./: .gitignore  CMakeLists.txt  Makefile  README.md  hajimu.json  release.sh
.github/workflows/: build.yml
examples/: hello_2d.jp
include/: eng_2d.h
src/: eng_map.c  eng_phys.c  plugin.c
